--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <title>Tasky - {% block title %}{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -14,6 +14,26 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+
+        <div class="container mt-5">
+            <div class="d-flex justify-content-between mb-5">
+                <a onclick="window.location.href = '{{ path('app_index') }}'"><h1 class="h3 mb-3 font-weight-normal logo">Tasky</h1></a>
+                {% if app.user %}
+                    <button class="btn btn-danger" onclick="window.location.href = '{{ path('app_logout') }}'">Wyloguj</button>
+                {% endif %}
+            </div>
+            {% block container %}
+            {% endblock %}
+        </div>
+
+        {% block body %}
+        {% endblock %}
+
+        <script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
+
+        <footer class="container mt-5">
+            <p>Strona stworzona przez eastcause!</p>
+        </footer>
     </body>
+
 </html>
